<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myColor"
    tools:context=".Login.AC4__SET_PROFILE">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/white">


        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="45dp"
            android:layout_height="46dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="23dp"
            android:layout_marginStart="23dp"
            app:srcCompat="@mipmap/p" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/bloked_users"
            android:textColor="@color/red" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="80dp"
        android:layout_marginBottom="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_alignParentLeft="true">


            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/im_blocked"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button21"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="50dp"
                android:background="@color/myColor"
                android:onClick="Con"
                android:text="@string/send_pl"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:background="@color/myColor"
                android:onClick="Coo"
                android:text="@string/cancel"
                android:textColor="@color/white" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/myColor">

        <TextView
            android:id="@+id/sdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:onClick="Con"
            android:text="@string/error_login"
            android:textColor="@color/white"
            android:textColorLink="@color/white" />

    </RelativeLayout>


</RelativeLayout>