<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myColor"
    tools:context=".Login.Rig">


    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/white"
            android:gravity="center"
            android:textColor="@color/red"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@color/white"
            android:gravity="center"
            android:textColor="@color/red"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@color/white"
            android:gravity="center"
            android:textColor="@color/red"
            android:layout_alignParentLeft="true" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="45dp"
            android:layout_height="46dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="23dp"
            app:srcCompat="@mipmap/p"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="23dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginBottom="50dp"
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_alignParentLeft="true">


            <EditText
                android:id="@+id/User_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12dp" />

            <EditText
                android:id="@+id/User_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12dp" />


            <EditText
                android:id="@+id/User_Password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:hint="@string/passoerw"
                android:inputType="textVisiblePassword"
                android:selectAllOnFocus="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12dp" />

            <Button
                android:id="@+id/login2"
                android:layout_width="162dp"
                android:layout_height="31dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@color/white"
                android:backgroundTint="@color/myColor"
                android:gravity="center"
                android:onClick="email_sign_in_button12"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>





    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">

        <TextView
            android:id="@+id/goRigNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="14dp"
            android:onClick="Con"
            android:text="@string/error_login"
            android:textColor="@color/white"
            android:textColorLink="@color/white" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="13dp"
            android:onClick="Coo"
            android:text="@string/cancel"
            android:textColor="@color/white" />

    </RelativeLayout>


</RelativeLayout>