<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myColor"
    tools:context=".Login.AC4__SET_PROFILE">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:layout_alignParentLeft="true">


        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="45dp"
            android:layout_height="46dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="23dp"
            android:layout_marginStart="23dp"
            app:srcCompat="@mipmap/p" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/myColor">

        <TextView
            android:id="@+id/sdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:onClick="Con"
            android:text="@string/error_login"
            android:textColor="@color/white"
            android:textColorLink="@color/white" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_marginBottom="50dp"
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:gravity="center"
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="هل يمكننا قراءة ملفات الخصوصية وسياسة الاستخدام معا ؟"
                android:textColor="@color/white" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/textView32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/publice"
                    android:textColor="@color/white" />
            </ScrollView>

            <Button
                android:id="@+id/button21"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/myColor"
                android:onClick="X_OK"
                android:text="@string/okNext"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@color/myColor"
                android:onClick="X_NO"
                android:text="@string/reject"
                android:textColor="@color/white" />

        </LinearLayout>



    </RelativeLayout>



</RelativeLayout>