<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myColor"
    tools:context=".Login.AC1___SET_PROFILE">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true">


            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/white"
                android:gravity="center"
                android:textColor="@color/red" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView22"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:background="@color/white"
                android:gravity="center"
                android:textColor="@color/red" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView23"
                android:background="@color/white"
                android:gravity="center"
                android:textColor="@color/red" />

            <TextView
                android:id="@+id/dat00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="263dp"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="60dp"
                android:layout_height="51dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="23dp"
                android:layout_marginStart="23dp"
                app:srcCompat="@mipmap/p" />


        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nam1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:digits="@string/namee"
                android:hint="@string/ferstname"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12dp" />

            <EditText
                android:id="@+id/nam2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:digits="@string/namee"
                android:hint="@string/lastname"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12dp" />

            <EditText
                android:id="@+id/date3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:hint="@string/age"
                android:inputType="number"
                android:maxLength="2"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12dp" />


            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:background="@color/white"
                android:gravity="center"
                android:onClick="getNext11"
                android:text="@string/next"

                android:textColor="@color/black" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:onClick="Con"
            android:text="@string/error_login"
            android:textColor="@color/white" />
    </RelativeLayout>

</RelativeLayout>