<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myColor"
    tools:context=".Login.AC3__SET_PROFILE">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">


        <TextView
            android:id="@+id/sdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:onClick="Con"
            android:text="@string/error_login"
            android:textColor="@color/white"
            android:textColorLink="@color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="انقر هنا لتحديد صورة"
                android:textColor="@color/myColor" />

            <ImageButton
                android:id="@+id/addProfileBtnf"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:adjustViewBounds="true"
                android:background="@color/myColor"
                android:cropToPadding="true"
                android:onClick="setImagePBNoe"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/acconte_image_profaile" />

            <Button
                android:layout_marginBottom="10dp"

                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:background="@color/myColor"
                android:onClick="no_ok"
                android:text="@string/noo"
                android:textColor="@color/white" />

            <Button
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/button18"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:background="@color/myColor"
                android:onClick="sdsdsdsdsaaaa"
                android:text="@string/donAndNext"
                android:textColor="@color/white" />


        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
        android:textColor="@color/white"
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />


    </RelativeLayout>


</RelativeLayout>